fix secondary properties overflow

--- a/src/app/property/[id]/images.module.scss
+++ b/src/app/property/[id]/images.module.scss
@@ -11,7 +11,8 @@
 }
 
 .main_image {
-    height: 60vh;
+    max-height: 60vh;
+    height: 100%;
     border-radius: var(--space2);
     overflow: hidden;
 
@@ -23,6 +24,8 @@
 }
 
 .secondary_images {
+    max-height: 60vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     row-gap: var(--space3);
